--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/BlazorTrainingBE/GameStore.db
+/BlazorTrainingBE/GameStore.db-shm
+/BlazorTrainingBE/GameStore.db-wal
